updated code to successfully use positionable classes, rather than fixed one, which should work better with z-indexing.
removed width and height adjustments from the front and back flip cards as the controls don't actually do anything.  applied DRY to z-index of front and back

--- a/frontend/flip-card.css
+++ b/frontend/flip-card.css
@@ -4,7 +4,7 @@ background-color: transparent;
 }
   
 .flip-card-inner {
-    position: fixed;
+    position: relative;
     width: 100%;
     height: 100%;
     transition: transform 0.6s;
@@ -16,7 +16,7 @@ background-color: transparent;
 }
 
 .shadow-box {
-    position: fixed;
+    position: relative;
     width: 100%;
     height: 100%;
     box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
@@ -24,23 +24,21 @@ background-color: transparent;
 }
 
 .flip-card-front, .flip-card-back {
-    position: fixed;
-    width: 95%;
-    height: 95%;
+    position: absolute;
     -webkit-backface-visibility: hidden;
-    backface-visibility: hidden;            
+    backface-visibility: hidden;        
+    z-index: 20;    
 }
 
 .flip-card-front {
     background-image: url(/frontend/white-construction-paper-texture-500px.jpg);
     filter: hue-rotate(150deg);
     transform: rotate(0deg);    
-    z-index: 2;
+
 }
 
 .flip-card-back {
     background-image: url(/frontend/white-construction-paper-texture-500px.jpg);
     filter: hue-rotate(150deg);            
     transform: rotateX(180deg);    
-    z-index: 2;
 }
